# Chatapp

./: .dockerignore  .env.sample  .gitignore  Caddyfile  Dockerfile  Procfile  README.md  app.py  build.sh  db.sqlite3  docker-compose.dev.yaml  docker-compose.selfhost.yaml  info.txt  manage.py  package.json  pyproject.toml  render.yaml  required.txt  requirements.txt  vercel.json
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
apps/chatjs/: package.json  postcss.config.js  tailwind.config.js  vite.config.js
apps/templates/: base.html
chat/: consumers.py  routing.py  views.py
chat/migrations/: 0001_initial.py
commands/: push.sh  run.sh  superuser.sh
docker/compose/: Dockerfile
docker/standalone/: Dockerfile
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: index.html
pages/: forms.py  urls.py  views.py
pages/migrations/: 0005_auto_20211009_0857.py  0008_alter_contact_options.py
scripts/: collectstatic.sh  entrypoint.sh  migrations.sh  release.sh  run.sh  secrets.sh  superuser.sh
src/: asgi.py  urls.py
src/settings/: base.py  local.py  production.py
static/js/: script.js
templates/: base.html
templates/accounts/: login_view.html  register_view.html
templates/chat/: enter_room.html  room.html  room_list.html  room_new.html
templates/components/: nav.html  navbar.html
templates/css/: css.html
templates/js/: js.html
templates/pages/: about_us.html  bad_request.html  contact_us.html  error.html  home.html
web/: db.sqlite3  manage.py
(+60 files in other folders)
