[tool.poetry]
name = "chatapp"
version = "0.1.0"
description = ""
authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">3.2,<3.3"
channels = "3.0.4"
Pillow = "^9.1.0"
whitenoise = "^6.0.0"
channels-redis = "3.4.0"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
